--- a/Taskar.io/package.json
+++ b/Taskar.io/package.json
@@ -14,6 +14,7 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "mitt": "^3.0.0",
     "oh-vue-icons": "^1.0.0-rc3",
     "vue": "^3.2.47"
   },
